--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,3 +1,10 @@
-<h2 id="title">Welcome to Ember</h2>
+<h2>bidness</h2>
+
+<ul>
+  <li>{{link-to 'Home' 'index'}}</li>
+  <li>{{link-to 'Contacts' 'contacts'}}</li>
+</ul>
+
+<hr>
 
 {{outlet}}
