--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -3,6 +3,7 @@
 <ul>
   <li>{{link-to 'Home' 'index'}}</li>
   <li>{{link-to 'Contacts' 'contacts'}}</li>
+  <li>{{link-to 'New Contact' 'new-contact'}}</li>
 </ul>
 
 <hr>
